--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: #ebd36f;
+    background-image : url('../image/backgroudImage1.jpg');
+    background-repeat: no-repeat;
 }
 
 #header {
@@ -31,3 +33,10 @@ body {
 #buttonModifier{
     float: right;
 }
+
+#imageManga{
+    max-width: 255px;
+    width: 100%;
+    height: auto;
+}
+
