--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #ebd36f;
-    background-image : url('../image/backgroudImage1.jpg');
-    background-repeat: no-repeat;
+/*    background-image : url('../image/backgroudImage1.jpg');
+    background-repeat: no-repeat;*/
 }
 
 #header {
