--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,24 +1,62 @@
+html {
+    height: 100%;
+}
+
 body {
-    background-color: #ebd36f;
-/*    background-image : url('../image/backgroudImage1.jpg');
-    background-repeat: no-repeat;*/
+max-height: 70%;
+margin: 0;
+padding: 0;
+}
+
+#backgroud{
+    background-image : url('../image/backgroudImage2.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size : cover;
 }
 
 #header {
     margin-bottom : 80px;
 }
+
 /*Style pour la navbar*/
 #navBar {
     width: 70%;
 }
 
-
-#footerStyle{
-    background-color: #3d3d3d;
-}
 .card-footer{
     color: white;
     background-color: #9D9D9D;
+}
+
+/*Style pour le footer*/
+.page-footer {
+    padding-top: 1.5rem;
+    background-color:  #1e2c59;
+    color:  #ffffff;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: black;
+    text-decoration: underline;
+}
+
+/*Maps Google*/
+.tcolor {
+    border-width: 3px;
+    border-style: solid;
+    border-image: linear-gradient(to bottom, white, rgba(0, 0, 0, 0)) 1 100%;
+}
+
+.ptext {
+    text-align: center;
+    font-size: 0.8rem;
+    margin-bottom: 0;
 }
 
 /*Style pour le formulaire*/
@@ -39,4 +77,3 @@ body {
     width: 100%;
     height: auto;
 }
-
